fix: contrast on dark mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -131,10 +131,10 @@ section.content {
 }
 
 %btn {
-  min-width: 150px;
+  min-width: 175px;
   text-align: center;
   padding: 12px;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 500;
   border-radius: var(--card-border-radius);
   display: inline-block;
